fix overflow ellipsis

--- a/shared/ui/styles/codemarks.less
+++ b/shared/ui/styles/codemarks.less
@@ -588,10 +588,7 @@
 	overflow: hidden;
 	white-space: nowrap;
 	display: block;
-
-	.external-url {
-		text-overflow: ellipsis;
-	}
+	text-overflow: ellipsis;
 
 	&:hover {
 		color: @text-color-info;
